Can now play audio on Android! - Fixed Bug: I believe the audio not playing on Android was due to the audio player being hidden behind the navigation tabs - so by hiding them it uncovered the audio player - Fixed Bug: For touch devices e.g. mobiles, tablets, the slide navigator in slide view was not responding. It would only respond on desktop with a mouse. The slide navigator now uses the ion content view to display the hymns

--- a/www/css/prayers-detail.css
+++ b/www/css/prayers-detail.css
@@ -1,3 +1,5 @@
-.audio-wrapper { position: fixed; top: 0; left: 0; z-index: 9999; width: 100%; height: 12%; margin:0; padding:5px; background-color: #002b36; text-align: center; }
+.audio-wrapper { position: fixed; top: 0; left: 0; z-index: 9999; width: 100%; height: 85px; max-height: 85px; margin:0; padding:5px; background-color: #000000; text-align: center; }
 .space-top { margin-top: 34px; }
 h3:first-child { padding: 0 10px; }
+.tab-nav.tabs { display: none; }
+.has-tabs, .bar-footer.has-tabs { bottom: 0; }
